<resources>
    <string name="app_name">NotBored APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Suggestions screen
    <string name="tryAnother">Try another</string>
    <string name="price">Price</string>
    <string name="participants">Participants</string>

    // Terms&amp;Conditions
    <string name="termsAndConditions">Terms and Conditions</string>
    <string name="notBored">Not Bored</string>
    <string name="largeText">skfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfklskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvljgnvdlrjbvlejglejrbfnvlskfdvwlejvclwjlwhblefhbvfkljgnvdlrjbvlejglejrbfnvl</string>
    <string name="numberOfParticipants">number of participants</string>
    <string name="btnStart">Start</string>

    //Activities
    <string name="activities">Activities</string>
    <string-array name="activities">
        <item name="education">Education</item>
        <item name="recreational">Recreational</item>
        <item name="social">Social</item>
        <item name="diy">Diy</item>
        <item name="charity">Charity</item>
        <item name="coocking">Cooking</item>
        <item name="relaxation">Relaxation</item>
        <item name="music">Music</item>
        <item name="busywork">Busywork</item>
    </string-array>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>