<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E2196F3">

    <Button
        android:id="@+id/tryAnotherButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="40dp"
        android:text="@string/tryAnother"
        android:textColor="@color/white"
        android:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/dollarImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/ic_baseline_attach_money_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/price"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/dollarImage"
        app:layout_constraintTop_toTopOf="@+id/dollarImage"
        />

    <TextView
        android:id="@+id/priceRangeText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="50dp"
        android:text="@string/price"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dollarImage" />

    <ImageView
        android:id="@+id/personImage"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toTopOf="@+id/dollarImage"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_40" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/participants"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/personImage"
        app:layout_constraintTop_toTopOf="@+id/personImage"
        />

    <TextView
        android:id="@+id/personAmountText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="50dp"
        android:text="@string/participants"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/personImage"/>

    <TextView
        android:id="@+id/suggestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Any random Activity"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>